dependency injection, add tests
Signed-off-by: Maciej Obuchowski <obuchowski.maciej@gmail.com>